Add each nth(1n n2 3n)

--- a/index.html
+++ b/index.html
@@ -59,6 +59,97 @@
           <p></p>
         </div>
       </section>
+      <section>
+        <div>
+          <p>Visitor Online</p>
+          <p>$ 95,0000</p>
+          <p>Increases by 5%</p>
+        </div>
+        <div>
+          <p>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="Black" d="M18,2H6L2,8L12,22L22,8L18,2M4.43,8L7.07,4H16.93L19.57,8L12,18.56L4.43,8Z" />
+          </svg>
+      </p>
+          <p></p>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>Visitor Online</p>
+          <p>$ 95,0000</p>
+          <p>Increases by 5%</p>
+        </div>
+        <div>
+          <p>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="Black" d="M18,2H6L2,8L12,22L22,8L18,2M4.43,8L7.07,4H16.93L19.57,8L12,18.56L4.43,8Z" />
+          </svg>
+      </p>
+          <p></p>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>Visitor Online</p>
+          <p>$ 95,0000</p>
+          <p>Increases by 5%</p>
+        </div>
+        <div>
+          <p>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="Black" d="M18,2H6L2,8L12,22L22,8L18,2M4.43,8L7.07,4H16.93L19.57,8L12,18.56L4.43,8Z" />
+          </svg>
+      </p>
+          <p></p>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>Visitor Online</p>
+          <p>$ 95,0000</p>
+          <p>Increases by 5%</p>
+        </div>
+        <div>
+          <p>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="Black" d="M18,2H6L2,8L12,22L22,8L18,2M4.43,8L7.07,4H16.93L19.57,8L12,18.56L4.43,8Z" />
+          </svg>
+      </p>
+          <p></p>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>Visitor Online</p>
+          <p>$ 95,0000</p>
+          <p>Increases by 5%</p>
+        </div>
+        <div>
+          <p>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="Black" d="M18,2H6L2,8L12,22L22,8L18,2M4.43,8L7.07,4H16.93L19.57,8L12,18.56L4.43,8Z" />
+          </svg>
+      </p>
+          <p></p>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>Visitor Online</p>
+          <p>$ 95,0000</p>
+          <p>Increases by 5%</p>
+        </div>
+        <div>
+          <p>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="Black" d="M18,2H6L2,8L12,22L22,8L18,2M4.43,8L7.07,4H16.93L19.57,8L12,18.56L4.43,8Z" />
+          </svg>
+      </p>
+          <p></p>
+        </div>
+      </section>
+      
 
 
     </main>
